crates/plotnik-tests/tests/04-emit/types/captures/builtin_does_not_legalize_optional_unlabeled_alternation.txt
Q = (program
  [
    (identifier)? @x :: bool
    {
      (identifier) @id
    }? @x :: bool
  ]
)
------------------ DIAGNOSTICS -------------------
error: capture `@x` has incompatible types across alternatives
 --> query.ptk:3:19
  |
3 |     (identifier)? @x :: bool
  |                   ^^
...
6 |     }? @x :: bool
  |        -- and a different type here
  |
help: make every alternative produce the same type, or label the alternatives for a variant type
